test/sema/enum-associated-value-order.delta.output
enum-associated-value-order.delta:9:17: error: invalid argument name 'b' for parameter 'a'
    var a = E.A(b: 1, a: 2);
                ^
